--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
     - cron: "0 2 * * *"   # daily run (2 AM UTC)
 
 jobs:
-  run-pipeline:
+nano .github/workflows/pipeline.yml  run-pipeline:
     runs-on: ubuntu-latest
 
     # ✅ PostgreSQL service (temporary DB)
@@ -55,3 +55,12 @@ jobs:
           DB_NAME: sales_warehouse
           DB_PORT: 5432
         run: python pipeline.py
+      # ✅ Success notification
+      - name: Notify Success
+        if: success()
+        run: echo "✅ Data Warehouse Pipeline SUCCESS" 
+
+      # ❌ Failure notification
+      - name: Notify Failure
+        if: failure()
+        run: echo "❌ Data Warehouse Pipeline FAILED"
